--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SignFlow</title>
+    <title>DocuSeal</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -16,11 +16,12 @@
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              primary: {"50":"#ecfdf5","100":"#d1fae5","200":"#a7f3d0","300":"#6ee7b7","400":"#34d399","500":"#10b981","600":"#059669","700":"#047857","800":"#065f46","900":"#064e3b","950":"#022c22"},
+              primary: {"50":"#eef2ff","100":"#e0e7ff","200":"#c7d2fe","300":"#a5b4fc","400":"#818cf8","500":"#6366f1","600":"#4f46e5","700":"#4338ca","800":"#3730a3","900":"#312e81","950":"#1e1b4b"},
+              slate: {"50":"#f8fafc","100":"#f1f5f9","200":"#e2e8f0","300":"#cbd5e1","400":"#94a3b8","500":"#64748b","600":"#475569","700":"#334155","800":"#1e293b","900":"#0f172a","950":"#020617"},
               border: "hsl(214.3 31.8% 91.4%)",
               input: "hsl(214.3 31.8% 91.4%)",
-              ring: "#059669",
-              background: "hsl(0 0% 100%)",
+              ring: "#4f46e5",
+              background: "#f8fafc", // slate-50
               foreground: "hsl(222.2 84% 4.9%)",
               card: "hsl(0 0% 100%)",
               "card-foreground": "hsl(222.2 84% 4.9%)",
@@ -54,7 +55,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50">
+  <body class="bg-slate-100">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
