--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     "react-dnd": "https://aistudiocdn.com/react-dnd@^16.0.1",
     "pdfjs-dist/": "https://aistudiocdn.com/pdfjs-dist@^4.3.136/",
     "react-dnd-html5-backend": "https://aistudiocdn.com/react-dnd-html5-backend@^16.0.1",
-    "pdf-lib": "https://aistudiocdn.com/pdf-lib@^1.17.1"
+    "pdf-lib": "https://aistudiocdn.com/pdf-lib@^1.17.1",
+    "@google/genai": "https://aistudiocdn.com/google-genai@^0.15.0"
   }
 }
 </script>
