--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              primary: {"50":"#eef2ff","100":"#e0e7ff","200":"#c7d2fe","300":"#a5b4fc","400":"#818cf8","500":"#6366f1","600":"#4f46e5","700":"#4338ca","800":"#3730a3","900":"#312e81","950":"#1e1b4b"},
+              primary: {"50":"#f0f2ff","100":"#e5e7ff","200":"#cdd2ff","300":"#aeb5ff","400":"#8e96ff","500":"#6e74ff","600":"#5046e5","700":"#4238ca","800":"#362f9a","900":"#2c2a7a","950":"#1e1b4b"},
               slate: {"50":"#f8fafc","100":"#f1f5f9","200":"#e2e8f0","300":"#cbd5e1","400":"#94a3b8","500":"#64748b","600":"#475569","700":"#334155","800":"#1e293b","900":"#0f172a","950":"#020617"},
               border: "hsl(214.3 31.8% 91.4%)",
               input: "hsl(214.3 31.8% 91.4%)",
-              ring: "#4f46e5",
-              background: "#f8fafc", // slate-50
-              foreground: "hsl(222.2 84% 4.9%)",
-              card: "hsl(0 0% 100%)",
-              "card-foreground": "hsl(222.2 84% 4.9%)",
-              popover: "hsl(0 0% 100%)",
-              "popover-foreground": "hsl(222.2 84% 4.9%)",
+              ring: "#5046e5",
+              background: "#ffffff",
+              foreground: "#0f172a",
+              card: "#ffffff",
+              "card-foreground": "#0f172a",
+              popover: "#ffffff",
+              "popover-foreground": "#0f172a",
             }
           }
         }
@@ -37,6 +37,10 @@
         font-family: 'Inter', sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+        background-color: #f8fafc; /* slate-50 */
+        background-image: radial-gradient(#e2e8f0 1px, transparent 0);
+        background-size: 30px 30px;
+        line-height: 1.6;
       }
     </style>
   <script type="importmap">
@@ -56,7 +60,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-100">
+  <body class="bg-slate-50">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
